<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.com.sybrem.appbiochem.MainActivity">

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TabWidget
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@android:id/tabs" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/tabcontent">

    <LinearLayout
        android:id="@+id/tab1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cliente"
        android:id="@+id/textView"/>


    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextView"
        android:ems="15"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_familia"
        android:id="@+id/textFamilia"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lstViewFamilia"
        android:layout_margin="10dp"
        ></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_subTipo"
        android:id="@+id/lblSubTipo"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lstViewSubtipo"
        android:layout_margin="10dp"
        ></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_tipo_venta"
        android:id="@+id/lblTipoVenta"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lstViewTipoVenta"
        android:layout_margin="10dp"
        ></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_conducto"
        android:id="@+id/lblConducto"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lstViewConducto"
        android:layout_margin="10dp"
        ></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_comentarios"
        android:id="@+id/lblComentarios"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="15"
        android:id="@+id/editText"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/btn_enviar"
        android:id="@+id/button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:text="@string/lbl_partida"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:ems="2"/>
                <TextView
                    android:text="@string/lbl_producto"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/lbl_cantidad"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="1"
                    android:ems="2"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteProducto1"
                    android:ems="10"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidadProducto1"
                    android:ems="5"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="2"
                    android:ems="2"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteProducto2"
                    android:ems="10"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidadProducto2"
                    android:ems="5"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="3"
                    android:ems="2"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteProducto3"
                    android:ems="10"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidadProducto3"
                    android:ems="5"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="4"
                    android:ems="2"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteProducto4"
                    android:ems="10"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidadProducto4"
                    android:ems="5"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="5"
                    android:ems="2"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteProducto5"
                    android:ems="10"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidadProducto5"
                    android:ems="5"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="6"
                    android:ems="2"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteProducto6"
                    android:ems="10"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidadProducto6"
                    android:ems="5"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="7"
                    android:ems="2"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteProducto7"
                    android:ems="10"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidadProducto7"
                    android:ems="5"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="8"
                    android:ems="2"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteProducto8"
                    android:ems="10"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidadProducto8"
                    android:ems="5"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="9"
                    android:ems="2"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteProducto9"
                    android:ems="10"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidadProducto9"
                    android:ems="5"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="10"
                    android:ems="2"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteProducto10"
                    android:ems="10"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidadProducto10"
                    android:ems="5"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

    </FrameLayout>

    </LinearLayout>

    </TabHost>

</LinearLayout>
